Implement swagger annotation style
