# storage/api-docs/api-docs.json
@@ -18,7 +18,51 @@
                         "description": "Successful operation",
                         "content": {
                             "application/json": {
-                                "schema": {}
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "number",
+                                                        "example": ""
+                                                    },
+                                                    "name": {
+                                                        "type": "string",
+                                                        "example": "John Doe"
+                                                    },
+                                                    "email": {
+                                                        "type": "string",
+                                                        "example": ""
+                                                    },
+                                                    "address": {
+                                                        "type": "object",
+                                                        "example": ""
+                                                    }
+                                                },
+                                                "type": "object"
+                                            },
+                                            "example": [
+                                                {
+                                                    "id": 1,
+                                                    "name": "Kristine",
+                                                    "email": "kristine@gmail.com",
+                                                    "address": {
+                                                        "address": "Cebu"
+                                                    }
+                                                },
+                                                {
+                                                    "id": 2,
+                                                    "name": "John Doe",
+                                                    "email": "john@gmail.com",
+                                                    "address": null
+                                                }
+                                            ]
+                                        }
+                                    },
+                                    "type": "object"
+                                }
                             }
                         }
                     },
@@ -74,15 +118,41 @@
                         "description": "Register Successfully",
                         "content": {
                             "application/json": {
-                                "schema": {}
-                            }
-                        }
-                    },
-                    "200": {
-                        "description": "Register Successfully",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "text",
+                                                    "example": 1
+                                                },
+                                                "name": {
+                                                    "type": "text",
+                                                    "example": "Joe Doe"
+                                                },
+                                                "email": {
+                                                    "type": "text",
+                                                    "example": "joe@gmail.com"
+                                                },
+                                                "address": {
+                                                    "properties": {
+                                                        "id": {
+                                                            "type": "text",
+                                                            "example": 1
+                                                        },
+                                                        "address": {
+                                                            "type": "text",
+                                                            "example": "cebu"
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
                             }
                         }
                     },
@@ -126,7 +196,41 @@
                         "description": "Successful operation",
                         "content": {
                             "application/json": {
-                                "schema": {}
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "text",
+                                                    "example": 1
+                                                },
+                                                "name": {
+                                                    "type": "text",
+                                                    "example": "Joe Doe"
+                                                },
+                                                "email": {
+                                                    "type": "text",
+                                                    "example": "joe@gmail.com"
+                                                },
+                                                "address": {
+                                                    "properties": {
+                                                        "id": {
+                                                            "type": "text",
+                                                            "example": 1
+                                                        },
+                                                        "address": {
+                                                            "type": "text",
+                                                            "example": "cebu"
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
                             }
                         }
                     },
@@ -145,15 +249,14 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Update existing user",
-                "description": "Returns updated user data",
-                "operationId": "updateusers",
+                "summary": "Updat User",
+                "description": "Will save a new user in DB",
+                "operationId": "UpdateUser",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
-                        "description": "Project id",
-                        "required": true,
+                        "description": "User id",
                         "schema": {
                             "type": "integer"
                         }
@@ -161,7 +264,7 @@
                 ],
                 "requestBody": {
                     "content": {
-                        "multipart/form-data": {
+                        "application/json": {
                             "schema": {
                                 "required": [
                                     "address[address]",
@@ -171,29 +274,81 @@
                                 ],
                                 "properties": {
                                     "name": {
-                                        "type": "text"
+                                        "type": "text",
+                                        "example": "Update Sample Name"
                                     },
                                     "email": {
-                                        "type": "text"
+                                        "type": "text",
+                                        "example": "update@gmail.com"
                                     },
                                     "password": {
-                                        "type": "password"
+                                        "type": "password",
+                                        "example": "password"
                                     },
-                                    "address[address]": {
-                                        "type": "text"
+                                    "address": {
+                                        "properties": {
+                                            "id": {
+                                                "type": "text",
+                                                "example": 1
+                                            },
+                                            "address": {
+                                                "type": "text",
+                                                "example": "cebu"
+                                            }
+                                        },
+                                        "type": "object"
                                     }
                                 },
                                 "type": "object"
                             }
-                        },
-                        "application/json": {
-                            "schema": {}
                         }
                     }
                 },
                 "responses": {
-                    "202": {
-                        "description": "Successful operation",
+                    "200": {
+                        "description": "Update Successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "text",
+                                                    "example": 1
+                                                },
+                                                "name": {
+                                                    "type": "text",
+                                                    "example": "Joe Doe"
+                                                },
+                                                "email": {
+                                                    "type": "text",
+                                                    "example": "joe@gmail.com"
+                                                },
+                                                "address": {
+                                                    "properties": {
+                                                        "id": {
+                                                            "type": "text",
+                                                            "example": 1
+                                                        },
+                                                        "address": {
+                                                            "type": "text",
+                                                            "example": "cebu"
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
                         "content": {
                             "application/json": {
                                 "schema": {}
@@ -201,13 +356,7 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
+                        "description": "Bad request"
                     },
                     "404": {
                         "description": "Resource Not Found"
@@ -233,11 +382,19 @@
                     }
                 ],
                 "responses": {
-                    "204": {
+                    "200": {
                         "description": "Successful operation",
                         "content": {
                             "application/json": {
-                                "schema": {}
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "text",
+                                            "example": "Data deleted successfully!"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
                             }
                         }
                     },
